[workspace.package]
authors = ["SARDONYX"]
categories = ["encoding"]
description = "SKSE plugin creation library"
edition = "2024"
keywords = ["skyrim"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SARDONYX-sard/commonlibsse_ng"
rust-version = "1.85"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/wheeler_rs"]
resolver = "3"


[workspace.dependencies]
commonlibsse_ng = { git = "https://github.com/SARDONYX-sard/commonlibsse_ng", rev = "db98f80" }
serde = { version = "1.0.219" }                                                                 # Implement (De)Serializer
snafu = { version = "0.8.5" }                                                                   # To define error types.
tracing = { version = "0.1.41" }

# Dev dependencies
pretty_assertions = "1.4.1" # Color diff assertion

# Optional
# [workspace.lints.clippy]
# all = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
