[package]
name = "xtask"
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
snafu = { workspace = true }                         # To define error types.


# [lints]
# workspace = true
