[package]
name = "commonlibsse_ng_re_ext"
version = "0.1.0"
description = "Unique implementation of commonlibsse_ng missing API"
edition.workspace = true
rust-version.workspace = true

[dependencies]
commonlibsse_ng = { workspace = true, features = ["derive"] }
snafu = { workspace = true }
tracing = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
  "Win32",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System",
  "Win32_System_Kernel",
  "Win32_System_Threading",
  "Win32_UI",
  "Win32_UI_Shell",
] }

[features]
tracing = ["dep:tracing", "commonlibsse_ng/tracing"]
full = ["tracing"]
