[package]
name = "wheeler_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
commonlibsse_ng = { workspace = true }
dashmap = { version = "6.1.0" }
imgui = "0.12.0"                                # GUI
serde = { workspace = true }                    # Implement (De)Serializer
snafu = { workspace = true }                    # Error definitions
tracing = { workspace = true, optional = true } # Log

# workspace members
commonlibsse_ng_re_ext = { path = "../commonlibsse_ng_re_ext" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
  "Win32",
  "Win32_UI",
  "Win32_UI_Shell",
  "Win32_System",
] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
tracing = ["dep:tracing", "commonlibsse_ng/tracing"]
full = ["tracing"]
