[package]
name = "wheeler_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
atomic_enum = "0.3.0"
commonlibsse_ng = { workspace = true }
dashmap = { version = "6.1.0" }
imgui = "0.12.0"                                # GUI
jwalk = { version = "0.8.1" }
serde = { workspace = true }                    # Implement (De)Serializer
snafu = { workspace = true }                    # Error definitions
tracing = { workspace = true, optional = true } # Log
usvg = { version = "0.45.1" }

# workspace members
commonlibsse_ng_re_ext = { path = "../commonlibsse_ng_re_ext" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
  "Win32",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System",
  "Win32_UI",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
tracing = ["dep:tracing", "commonlibsse_ng/tracing"]
full = ["tracing"]
