[package]
name = "wheeler_rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
commonlibsse_ng = { workspace = true, features = ["derive"] }
tracing = { version = "0.1.41", optional = true }

# workspace members
wheeler_core = { path = "../wheeler_core" }


[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
default = ["full"]

tracing = ["dep:tracing", "commonlibsse_ng/tracing", "wheeler_core/tracing"]
full = ["tracing"]
